# acces_securite_par_badge_rfid

./: .gitignore  README.md
programme_extra/DESFire_init_and_test/: CMakeLists.txt  prj.conf
programme_extra/DESFire_init_and_test/boards/: nrf7002dk_nrf5340_cpuapp.overlay
programme_extra/DESFire_init_and_test/src/: main.c
programme_extra/DESFire_init_and_test/src/desfire/: AES128.cpp  AES128.h  Buffer.h  DES.cpp  DES.h  DesFireKey.h  Desfire.cpp  Desfire.h  DesfireApp.cpp  DesfireApp.h  Secrets.h  Utils.cpp
programme_principal/: CMakeLists.txt  Kconfig  prj.conf
programme_principal/boards/: nrf7002dk_nrf5340_cpuapp.overlay
programme_principal/src/: main.c
programme_principal/src/task/: deviceInformation.h  logs.h  memoryManagement.c  memoryManagement.h  tcp.c  tcp.h  userInterface.c  userInterface.h  users.h  wifi.c  wifi.h
programme_principal/src/task/desfire/: Desfire.cpp  Desfire.h  DesfireApp.cpp  DesfireApp.h  Utils.h
programme_principal/src/task/fonts/: font_poppins_14.h  font_poppins_28.h
serveur/: Serveur_connecteur_DB_Client.py
serveur/siteweb/: server_site.py
serveur/siteweb/templates/: error.html  login.html  logs.html  style.css  user_management.html  user_management2.html
serveur/siteweb_bachelor/templates/: user_management.html  user_management2.html
